GPII-364: Corrected the layout of "Add contrast" adjuster group.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -52,7 +52,12 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-.gpii-prefsEditor label::first-letter {
+.gpii-prefsEditor label::first-letter,
+.gpii-prefsEditor h1::first-letter,
+.gpii-prefsEditor h2::first-letter,
+.gpii-prefsEditor h3::first-letter,
+.gpii-prefsEditor h4::first-letter,
+.gpii-prefsEditor h5::first-letter {
     text-transform: capitalize;
 }
 
@@ -942,19 +947,29 @@ input:checked + label > div > label > .gpii-iconCheckAdjusterCheckIcon:before {
 	border-radius: 0 !important;
 	margin-right: 20px !important;
 	padding: 0px !important;
-	height: 3em !important;
-	width: 3em !important;
+	height: 2em !important;
+	width: 2em !important;
 	cursor: pointer;
 }
 
 .fl-prefsEditor .fl-choice label {
-	line-height: 3em !important;
+	line-height: 2em !important;
 }
 
 .gpii-contrastThemeIndicator {
-	margin: 0 0 0 1.5em !important;
+	margin: 0 0 0 0.75em !important;
 }
 
 .gpii-contrast-contrastOptions {
 	display: inline-block;
+}
+
+/*
+    Style for onOffSwitch adjuster
+*/
+.gpii-onOffSwitch-container {
+	display: inline-block;
+    padding-bottom: 1em;
+    padding-top: 1em;
+    width: 100%;
 }
